<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/taskCellContainer_id"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/imgBtn_completeButton_cell_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:src="@drawable/unchecked_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="center"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/imgBtn_CheckBox_cell_txt"

            />
            <TextView
                android:id="@+id/tv_name_paceHolder_cell_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_name_place_holder_cell_txt"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_gravity="center"
                android:layout_weight="1"


                />
        <TextView
            android:id="@+id/tv_dueTime_cell_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/tv_name_place_holder_cell_txt"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginHorizontal="5dp"

            />

    </LinearLayout>
    <TextView
        android:id="@+id/tv_desc_cell_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_desc_frag_txt"
        android:layout_marginHorizontal="80dp"
        android:textSize="16sp"

        />
        </LinearLayout>
</androidx.cardview.widget.CardView>